--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "dependencies": {
     "@types/react-native-material-dropdown": "^0.11.3",
     "react": "16.9.0",
-    "react-native": "0.61.3",
-    "react-native-dropdown-autocomplete": "^1.0.18",
+    "react-native": "^0.61.3",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-material-ui": "^1.30.1",
-    "react-native-popup-menu": "^0.15.6",
+    "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-svg": "^9.13.3",
