--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^1.4.0",
     "@types/react-native-material-dropdown": "^0.11.3",
+    "@ui-kitten/components": "^4.4.0",
     "react": "16.9.0",
     "react-native": "^0.61.3",
     "react-native-elements": "^1.2.7",
+    "react-native-geocoding": "^0.4.0",
+    "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.4.0",
