--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.5.0",
-    "@react-navigation/material-bottom-tabs": "^5.1.9",
-    "@react-navigation/native": "^5.1.6",
-    "@react-navigation/stack": "^5.2.13",
+    "@react-navigation/drawer": "^5.6.4",
+    "@react-navigation/material-bottom-tabs": "^5.1.15",
+    "@react-navigation/native": "^5.2.4",
+    "@react-navigation/stack": "^5.2.19",
+    "@types/color": "^3.0.1",
     "@types/react-native-material-dropdown": "^0.11.3",
     "@ui-kitten/components": "^4.4.0",
     "color": "^3.1.2",
@@ -26,12 +27,13 @@
     "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-paper": "^3.8.0",
+    "react-native-paper": "^3.9.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
     "react-native-svg": "^9.13.3",
     "react-native-tab-view": "^2.14.0",
+    "react-native-text-input-mask": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
     "use-global-hook-ts": "^0.8.0"
   },
