--- a/ios/AwesomeTSProject/Info.plist
+++ b/ios/AwesomeTSProject/Info.plist
@@ -71,6 +71,12 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Cookie-Regular.ttf</string>
+		<string>Regular2.ttf</string>
+		<string>Typesauce.ttf</string>
+		<string>EchoRevival.otf</string>
+		<string>Zelek Bold.ttf</string>
+		<string>ZelekBold.ttf</string>
 	</array>
 </dict>
 </plist>
