--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.8.1",
     "@react-navigation/drawer": "^5.6.4",
     "@react-navigation/material-bottom-tabs": "^5.1.15",
     "@react-navigation/native": "^5.2.4",
-    "@react-navigation/stack": "^5.2.19",
+    "@react-navigation/stack": "^5.3.9",
     "@types/color": "^3.0.1",
     "@types/react-native-material-dropdown": "^0.11.3",
     "@ui-kitten/components": "^4.4.0",
@@ -22,10 +23,13 @@
     "react": "16.9.0",
     "react-native": "0.61.3",
     "react-native-appearance": "^0.3.3",
+    "react-native-document-picker": "^3.4.0",
     "react-native-elements": "^1.2.7",
     "react-native-geocoding": "^0.4.0",
     "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.9.0",
     "react-native-reanimated": "^1.8.0",
@@ -35,6 +39,8 @@
     "react-native-tab-view": "^2.14.0",
     "react-native-text-input-mask": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-scroll-to-bottom": "^2.0.0",
+    "stream-chat-react-native": "^0.10.2",
     "use-global-hook-ts": "^0.8.0"
   },
   "devDependencies": {
@@ -60,6 +66,11 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "rnpm": {
+    "assets": [
+      "./fonts/"
     ]
   }
 }
